# with_cmake

./: README.md
bazel_intro/: readme.md
bazel_intro/stage1/main/: hello.c
bazel_intro/stage2/main/: BUILD  activations.c  activations.h  testbed.c
bazel_intro/stage3/lib/: random.c  random.h  timer.c  timer.h
bazel_intro/stage3/main/: BUILD  testbed.c
bazel_intro/stage4/: BUILD  WORKSPACE  hello.cc
check_ComputeCapability/: .gitignore  CMakeLists.txt  Makefile  README.md
check_ComputeCapability/src/: check_cc.cpp
slambook2/: README.md
slambook2/ch10/: CMakeLists.txt  README.md  deps.cmake  pose_graph_g2o_lie_algebra.cpp
slambook2/ch11/: CMakeLists.txt  README.md  deps.cmake  gen_vocab_large.cpp
slambook2/ch12/: CMakeLists.txt  README.md
slambook2/ch12/dense_RGBD/: CMakeLists.txt  deps.cmake  surfel_mapping.cpp
slambook2/ch12/dense_mono/: CMakeLists.txt  dense_mapping.cpp  deps.cmake
slambook2/ch13/: CMakeLists.txt  deps.cmake
slambook2/ch13/app/: run_kitti_stereo.cpp
slambook2/ch3/: CMakeLists.txt
slambook2/ch3/examples/: CMakeLists.txt
slambook2/ch3/useEigen/: CMakeLists.txt
slambook2/ch3/useGeometry/: CMakeLists.txt
slambook2/ch3/visualizeGeometry/: CMakeLists.txt
slambook2/ch4/: CMakeLists.txt  deps.cmake
slambook2/ch4/example/: CMakeLists.txt  trajectoryError.cpp
slambook2/ch5/: CMakeLists.txt  README.md
slambook2/ch5/imageBasics/: CMakeLists.txt
slambook2/ch5/rgbd/: CMakeLists.txt
slambook2/ch5/stereo/: CMakeLists.txt
slambook2/ch6/: CMakeLists.txt  README.md
slambook2/ch7/: CMakeLists.txt  README.md  deps.cmake  orb_self.cpp  pose_estimation_3d2d.cpp
slambook2/ch8/: CMakeLists.txt  deps.cmake  optical_flow.cpp
slambook2/ch9/: CMakeLists.txt  README.md  bundle_adjustment_g2o.cpp  deps.cmake
slambook2/dependencies/: deps.cmake
slambook2/dependencies/dbow3/: get.sh  linux-x64.sh
slambook2/dependencies/g2o/: get.sh  linux-x64.sh
slambook2/dependencies/googletest/: linux-x64.sh
slambook2/dependencies/pangolin/: get.sh  linux-x64.sh
slambook2/dependencies/sophus/: get.sh  linux-x64.sh
